# doesisitchristmas.comsayitschristmasyet.com

./: .gitignore  README.md  app.py  maxmind.py  pyproject.toml  screenshot.py
.github/workflows/: code_format.yml  test.yml
styles/: main.css
templates/: index.html
tests/: test_maxmind.py
